--- a/hmtl/start.html
+++ b/hmtl/start.html
@@ -53,17 +53,73 @@
             </nav>
         </nav>
     </header>
-    <!-- showcase -->
+
     <main>
+        <!-- showcase -->
         <div class="showcase">
             <img src="../img/showcase-left.svg" alt="showcase picture">
             <div class="group"> 
                 <h2>SALE UP<br>To 50% off</h2>
                 <p>online shopping free home delivery over $100</p>
-                <button class="button buttondecor b-theme">SHOP NOW</button>
+                <button class="button b-theme">SHOP NOW</button>
             </div>
             <img src="../img/showcase-right.svg" alt="showcase picture">
         </div>
+
+        <!-- winter clearance and new arrivals -->
+        <div class="clearance-arrivals container">
+            <!-- clearence -->
+            <div class="clearance background"> 
+                <div class="info">
+                    <h2>Winter&nbsp;Clearance <br> Up to 70% off!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia quod necessitatibus maiores aspernatur aperiam optio repellendus, quas nesciunt illo repellat sunt aliquam autem, consectetur minus quos nobis velit. Exercitationem.</p>
+                    <button class="button b-dark">SHOP&nbsp;NOW</button>       
+                </div>
+                <img src="../img/winter-clearans-placeholder.svg" alt="winter clearance">
+            </div>
+            <!-- new arrivals -->
+            <div class="arrivals background">  
+                <div class="info">
+                    <h2>New<br>Arivals</h2>
+                    <button class="button b-dark">SHOP&nbsp;NOW</button>                         
+                </div>  
+                <img src="../img/new-arrivals-placeholder.svg" alt="new arrivals">
+            </div>
+        </div>
+    
+        <!-- featured products -->
+
+        <div class="featured-products container">
+            <h4>Featured Product</h4>
+            <div class="grid-container">
+                <div class="product-card">
+                    <div class="img-placeholder"></div>
+                    <div class="card-pop-up">
+                        <button class="b-circle"><img src="../img/wishlist-icon.svg" alt=""></button>
+                        <button class="b-circle"><img src="../img/share-icon.svg" alt=""></button>
+                        <button class="b-circle"><img src="../img/cart-icon.svg" alt=""></button>
+
+                        <button class="button b-theme">QUICK VIEW</button>
+                    </div>
+                    <div class="card-info">
+                        <p class="category">Category</p>
+                        <p class="product-name">Modern Black Blouse</p>
+                        <div clas="rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p class="original-price"></p>
+                        <p class="sale-price">$35.00</p>                        
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <!-- product cards -->
     </main>
 
     
