start-page done!

--- a/hmtl/start.html
+++ b/hmtl/start.html
@@ -365,7 +365,7 @@
 
                 <div class="info">
                     <h4>Let's Be<br>Conscious</h4>
-                    <button class="button b-light">FLASE SALE</button>
+                    <button class="button b-light">FLASH SALE</button>
                 </div>
             </div>
         </div>
@@ -1004,6 +1004,49 @@
             </div>  
         </div>   
 
+        <!-- line break -->
+        <div class="container"><hr class="line-break"></div>
+
+        <!-- Contact and shipping info -->
+        <div class="container contact-info">
+            <div class="group">
+                <button class="b-circle"> <img src="../img/customer-service-icon.svg" alt="customer service"></button>
+                <h6>Customer Support</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="group">
+                <button class="b-circle"> <img src="../img/secured-payment-icon.svg" alt="Secured payment"></button>
+                <h6>Secured Payment</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="group">
+                <button class="b-circle"> <img src="../img/delivery-truck-icon.svg" alt="Free home delivery"></button>
+                <h6>Free Home Delivery</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+            <div class="group">
+                <button class="b-circle"> <img src="../img/delivery-truck-icon.svg" alt="30 days return"></button>
+                <h6>30 Day Free Return</h6>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <hr>
+        <div class="footer-background">
+            <div class="social-media-links">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-google"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>    
+            </div>
+
+            
+            <p>&#169; 2022 Fixxo. All Rights Reserverd</p>
+
+        </div>
+    </footer>
 </body>
 </html>
