--- a/hmtl/start.html
+++ b/hmtl/start.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Fixxo - Modern black blouses galore">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixxo</title>
+    <title>Fixxo - Black Blouses Galore</title>
     <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="../css/style.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 
         <!-- navigation menu md and bigger -->
             <ul class="navigation-menu">
-                <li class="navigation-menu-item"><a href="../hmtl/start.html">Home</a></li>
+                <li class="navigation-menu-item"><a href="../hmtl/start.html" class="aktive-navigation-text">Home</a></li>
                 <li class="navigation-menu-item"><a href="#">Categories</a></li>
                 <li class="navigation-menu-item"><a href="../hmtl/product.html">Products</a></li>
                 <li class="navigation-menu-item"><a href="../hmtl/contact.html">Contacts</a></li>
@@ -45,10 +45,10 @@
                     <i class="fa-regular fa-bars me-md-3"></i>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">home</a></li>
+                    <li><a class="dropdown-item" href="#" >home</a></li>
                     <li><a class="dropdown-item" href="#">Categories</a></li>
                     <li><a class="dropdown-item" href="#">Products</a></li>
-                    <li><a class="dropdown-item" href="#">Contacts</a></li>
+                    <li><a class="dropdown-item" href="#" >Contacts</a></li>
                 </ul>                
             </nav>
         </nav>
@@ -1033,7 +1033,6 @@
     </main>
 
     <footer>
-        <hr>
         <div class="footer-background">
             <div class="social-media-links">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
