form connected to api

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -13,12 +13,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div class="d-flex justify-content-center align-items-center vh-100">
-        <div class="spinner-border" role="status">
-          <span class="visually-hidden">Loading...</span>
+      <div className="d-flex justify-content-center align-items-center vh-100">
+        <div className="spinner-border" role="status">
+          <span className="visually-hidden">Loading...</span>
         </div>
       </div>
-    </div>
-    
+    </div> 
   </body>
 </html>
