own solution start

--- a/start-mall/hmtl/contact.html
+++ b/start-mall/hmtl/contact.html
@@ -83,7 +83,7 @@
     </main>
     
     <footer>
-        <div class="footer-background footer-shirt-page">
+        <div class="footer-background footer-short-page">
             <div class="social-media-links">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
